--- a/index.html
+++ b/index.html
@@ -562,12 +562,17 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Health Economics<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Labor Economics<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Development Economics</p>
-      
-      <p><b><u>Education:</u></b><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• <strong>PhD in Economics</strong>, 2021 – present<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Delaware<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• <strong>MS in Economics</strong>, 2021<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Wisconsin–Madison</p>
+
+<!-- 
+  This is commented out
+  <p><b><u>Education:</u></b><br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• <strong>PhD in Economics</strong>, 2021 – present<br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Delaware<br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• <strong>MS in Economics</strong>, 2021<br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Wisconsin–Madison
+  </p>
+-->
+
     </div>
   </div>
 </section>
