--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
     Economics PhD Candidate &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
     <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
     &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-    <a href="CV_Vikrant_Kamble.pdf" target="_blank">CV</a>
+    <a href="CV_Vikrant_Kamble_latex.pdf" target="_blank">CV</a>
   </p>
 </header>
 
