--- a/index.html
+++ b/index.html
@@ -641,6 +641,7 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
       <h3>Instructor</h3>
       <ul>
         <li>ECON101: Introduction to Microeconomics <a href="econ101_course_evaluations_winter2025.pdf" target="_blank">(Course evaluations)</a>
+          <p class="indent"> Textbook used: Principles of Microconomics, 2nd edition by Stevenson and Wolfers</p>
           <p class="indent">Winter 2025</p>
         </li>
       </ul>
