--- a/index.html
+++ b/index.html
@@ -400,22 +400,26 @@
       color: var(--secondary-color);
     }
 
-    .header-container {
+/*For the header container, making the small font of my name and also the verticle space reduction*/
+.header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 30px;
-  background-color: #f8f9fa; /* optional background */
+  padding: 10px 30px; /* adjust top/bottom padding */
   font-family: sans-serif;
 }
 
 .header-name {
   font-weight: bold;
   font-size: 1.5em;
+  margin: 0;           /* remove default margins */
+  line-height: 1.2;    /* tighten spacing if needed */
 }
 
 .header-info {
   font-size: 1em;
+  margin: 0;           /* remove default margins */
+  line-height: 1.2;
   text-align: right;
 }
 
