--- a/index.html
+++ b/index.html
@@ -402,31 +402,27 @@
 
 /*For the header container, making the small font of my name and also the verticle space reduction*/
 .header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 30px; /* adjust top/bottom padding */
-  font-family: sans-serif;
+  text-align: center;
+  padding: 10px 30px;
 }
 
 .header-name {
   font-weight: bold;
-  font-size: 1.5em;
-  margin: 0;           /* remove default margins */
-  line-height: 1.2;    /* tighten spacing if needed */
+  font-size: 2em;
+  margin: 0;
+  line-height: 1.2;
 }
 
 .header-info {
-  font-size: 1em;
-  margin: 0;           /* remove default margins */
+  margin-top: 5px; /* reduce from default ~20px */
   line-height: 1.2;
-  text-align: right;
 }
 
 .header-info a {
   text-decoration: none;
   color: #0077cc;
 }
+
 
 
     /* Responsive Styles */
