--- a/index.html
+++ b/index.html
@@ -405,34 +405,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 30px;
-  margin: 0;
+  padding: 10px 30px; /* adjust top/bottom padding */
   font-family: sans-serif;
-  height: 60px; /* optional: fixes header height */
 }
 
-.header-left {
+.header-name {
   font-weight: bold;
-  font-size: 1.6em;
-  margin: 0;
-  line-height: 1;
+  font-size: 1.5em;
+  margin: 0;           /* remove default margins */
+  line-height: 1.2;    /* tighten spacing if needed */
 }
 
-.header-right {
+.header-info {
   font-size: 1em;
-  margin: 0;
-  line-height: 1;
-  display: flex;
-  align-items: center;
+  margin: 0;           /* remove default margins */
+  line-height: 1.2;
+  text-align: right;
 }
 
-.header-right a {
+.header-info a {
   text-decoration: none;
   color: #0077cc;
-}
-
-body {
-  margin: 0; /* prevents extra space at top if not already done */
 }
 
 
@@ -554,14 +547,13 @@ body {
 <body>
   <!-- Header Container -->
 <header class="header-container">
-  <div class="header-left">Vikrant V. Kamble</div>
-  <div class="header-right">
-    <span>Economics PhD Candidate</span>
-    &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+  <div class="header-name">Vikrant V. Kamble</div>
+  <p class="header-info">
+    Economics PhD Candidate &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
     <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
     &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
     <a href="CV_Vikrant_V_Kamble.pdf" target="_blank">CV</a>
-  </div>
+  </p>
 </header>
 
 
