--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      gap: 0.3rem;
+      gap: 0.1rem;
     }
 
     .header-info a {
@@ -128,6 +128,10 @@
       text-decoration: none;
       font-weight: 500;
       transition: var(--transition);
+    }
+
+    .header-info a[href^="mailto:"] {
+      font-style: italic;
     }
 
     .header-info a:hover {
@@ -531,6 +535,7 @@
   </style>
 </head>
 <body>
+
 
 
 
