--- a/index.html
+++ b/index.html
@@ -753,9 +753,9 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
           <a href="https://stats.oarc.ucla.edu/stata/" target="_blank" class="resource-link">View Resource</a>
         </div>
         <div class="resource-card" data-tags="stata basics introduction">
-          <h4>Customize Graph Styles in STATA</h4>
-          <p>Introduction to the different graph schemes in Stata.</p>
-          <a href="https://nariyoo.com/stata-how-to-customize-graph-styles-like-ggplot-in-r/" target="_blank" class="resource-link">View Resource</a>
+          <h4>Top 25 Stata Visualizations </h4>
+          <p>With Full Stata Code (by Fahad Mirza) </p>
+          <a href="https://medium.com/the-stata-gallery/top-25-stata-visualizations-with-full-code-668b5df114b6" target="_blank" class="resource-link">View Resource</a>
         </div>
       </div>
     </div>
