--- a/index.html
+++ b/index.html
@@ -792,6 +792,11 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
         </button>
       </div>
       <div class="resource-items">
+        <div class="resource-card" data-tags="DiD Resources">
+          <h4>DiD Resources: Pedro H. C. Sant'Anna</h4>
+          <p>A Comprehensive Course on DiD</p>
+          <a href="https://psantanna.com/did-resources/" target="_blank" class="resource-link">View Resource</a>
+        </div>
         <div class="resource-card" data-tags="diff-in-diff econometrics course">
           <h4>Diff-in-Diff course: Clement De Chaisemartin</h4>
           <p>Video course on difference-in-differences methodology.</p>
