--- a/index.html
+++ b/index.html
@@ -570,8 +570,26 @@
 <section id="home" class="section active">
   <div class="home-container" style="display: flex; align-items: flex-start; gap: 20px;">
     
-    <div class="profile-container" style="text-align: center;">
+<!--     <div class="profile-container" style="text-align: center;">
       <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 350px; height: auto; display: block; margin: 0 auto;">
+ -->
+<!-- For the circular image, above rectangular block is commeneted -->
+  <div class="profile-container" style="text-align: center;">
+  <!-- Circular Profile Image -->
+  <img src="vikrant1.png"
+       alt="Profile photo of Vikrant Kamble"
+       class="profile-photo"
+       style="
+         width: 250px;
+         height: 250px;
+         object-fit: cover;
+         border-radius: 50%;
+         display: block;
+         margin: 0 auto;
+         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+       ">
+</div>
+
       
       <div class="social-links" style="margin-top: 10px; display: flex; justify-content: center; gap: 15px;">
         <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">
