--- a/index.html
+++ b/index.html
@@ -574,18 +574,15 @@
       <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 350px; height: auto; display: block; margin: 0 auto;">
  -->
 <!-- For the circular image, above rectangular block is commeneted -->
-  <div class="profile-container" style="text-align: center;">
+<div class="profile-container" style="display: flex; align-items: center; gap: 20px;">
   <!-- Circular Profile Image -->
   <img src="vikrant1.png"
        alt="Profile photo of Vikrant Kamble"
-       class="profile-photo"
        style="
-         width: 250px;
-         height: 250px;
+         width: 150px;
+         height: 150px;
          object-fit: cover;
          border-radius: 50%;
-         display: block;
-         margin: 0 auto;
          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
        ">
 </div>
