--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
   <div class="header-info">
     <div>Economics PhD Candidate</div>
     <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
-    <a href="CV_Vikrant_V_Kamble.pdf" target="_blank">CV</a>
+    <a href="https://www.dropbox.com/scl/fi/m2a99tno3g37dqpmbzwnu/Vikrant_V_Kamble.pdf?rlkey=i3quy52a9jp3yj6iytfqd7aw7&st=2zaeyen5&dl=0" target="_blank">CV</a>
   </div>
 </header>
 
