--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@
         <span class="arrow">▶</span> Abstract
       </div>
       <div class="abstract-content">
-        This study examines the economic consequences of oil price declines using difference-in-differences identification strategy. Educational outcomes are measured using data from the Stanford Education Data Archive (SEDA. We estimate that the shock increased Mathematics and English Language Arts (ELA) scores by approximately 0.02 to 0.06 standard deviations. These gains are concentrated among specific subgroups, including Hispanic, female, Asian, and economically disadvantaged (ECD) students.
+        This study examines the economic consequences of oil price declines using difference-in-differences identification strategy. Educational outcomes are measured using data from the Stanford Education Data Archive (SEDA). We estimate that the shock increased Mathematics and English Language Arts (ELA) scores by approximately 0.02 to 0.06 standard deviations. These gains are concentrated among specific subgroups, including Hispanic, female, Asian, and economically disadvantaged (ECD) students.
       </div>
     </div>
 	
