--- a/index.html
+++ b/index.html
@@ -1008,21 +1008,19 @@
       </div>
     </div>
 	
-
-  </section>
-  
-
   
   <!-- Teaching Section -->
   <section id="teaching" class="section">
     <h2>Teaching Experience</h2>
     
     <h3>Instructor</h3>
-    <ul>
+ 	<ul>
       <li>ECON101: Introduction to Microeconomics <a href="econ101_course_evaluations_winter2025.pdf" target="_blank">(Course evaluations)</a>
         <p class="indent"> Winter 2025 | Textbook Used: Principles of Microconomics, 2nd edition by Stevenson and Wolfers</p>
+	  	<p class="indent"> Fall 2025 (86 students) | Textbook Used: Principles of Microconomics, 2nd edition by Stevenson and Wolfers</p>
       </li>
-    </ul>
+    </ul> 
+
     
     <h3>Graduate Courses (Teaching Assistant)</h3>
     <ul>
