--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
         This paper investigates how forced immigration affects borrowing constraints.
       </div>
     </div>
-	
+	</section>
   
   <!-- Teaching Section -->
   <section id="teaching" class="section">
