--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
   <div class="header-info">
     <div>Economics PhD Candidate</div>
     <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
-    <a href="https://www.dropbox.com/scl/fi/j8esr531m2wkxiaykmj0s/Vikrant_V_Kamble.pdf?rlkey=qt0y46usul3doj5kycdjew357&st=08dc6wxf&dl=0" target="_blank">CV</a>
+    <a href="https://www.dropbox.com/scl/fi/z7xxfbg2sr6u5vmp9bh7d/Vikrant_V_Kamble.pdf?rlkey=q54xgy7ks4i1b9bhu857jdg10&st=8iag5bac&dl=0" target="_blank">CV</a>
   </div>
 </header>
 
