--- a/index.html
+++ b/index.html
@@ -890,8 +890,7 @@
       <!-- Right side: Main content -->
       <div class="home-content">
         <p>Welcome to my website!</p>
-        <p>My name is Vikrant. I am a 5th-year Economics PhD job market candidate at the University of Delaware. I work on labor and health topics. My research employs econometric causal methods to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>
-          
+		<p>My name is Vikrant. I am an Economics PhD candidate at the University of Delaware on the job market for 2025-2026. I work on labor and health topics. My research uses econometric causal methods to examine policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>          
         <p>My work has been published in <em>Social Science Research</em>.</p>
         <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
       </div>
