--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
       margin-bottom: 30px;
       padding: 20px;
       background: #fafafa;
-      border-left: 4px solid #2c5aa0;
+      border-left: 4px solid #fafafa;  /* Same as background */
       transition: all 0.3s ease;
     }
 
