--- a/index.html
+++ b/index.html
@@ -912,101 +912,89 @@
       </div>
     </div>
 
-    <!-- Working Papers Section -->
-    <h3>Working Papers</h3>
     
-    <div class="paper-item">
-      <div class="paper-title">"Intertemporal Elasticity of Labor Supply for Taxicab Drivers"</div>
-      <div class="paper-authors">with <a href="https://swapnil-motghare.github.io/" target="_blank">Swapnil Motghare</a></div>
-      <div class="abstract-toggle" onclick="toggleAbstract(this)">
-        <span class="arrow">▶</span> Abstract
-      </div>
-      <div class="abstract-content">
-        This paper examines the intertemporal elasticity of labor supply for taxicab drivers using a novel instrument. We leverage exogenous variation in earnings opportunities to identify labor supply responses. Our findings suggest positive intertemporal elasticity, indicating that drivers increase their labor supply when wages are more. These results have important implications for understanding labor market dynamics in the gig economy.
-      </div>
-    </div>
+    <!-- Job Market Paper Section -->
+<h3>Job Market Paper</h3>
 
-    <div class="paper-item">
-      <div class="paper-title">"Labor Market Consequences of Cycling Program: Evidence from Bihar, India"</div>
-      <div class="abstract-toggle" onclick="toggleAbstract(this)">
-        <span class="arrow">▶</span> Abstract
-      </div>
-      <div class="abstract-content">
-        I investigate the long-term causal effects of a government cycling program in Bihar, India on labor market outcomes using a difference-in-differences-in-differences (DDD) approach. The program provided bicycles to female students to reduce barriers to school. I examine whether this intervention had lasting impacts on employment, wages, and labor force participation. Preliminary results suggest significant improvements in labor market outcomes, particularly for women and rural populations.
-      </div>
-    </div>
+<div class="paper-item">
+  <div class="paper-title">"The 1973 Oil Embargo and Infant Health Outcomes: Evidence from a Macroeconomic Shock"</div>
+  <div class="abstract-content">
+    <strong>Abstract:</strong> An extensive literature documents that economic shocks affect health outcomes, but mechanisms and distributional effects remain unclear. I study how energy shocks affect infant health using 1968-1979 Vital Statistics data. With an event-study framework that accounts for state-specific pre-trends, I find that states with higher oil dependence have birthweight increases following the 1973 oil embargo. Gains are larger for less-educated, relatively younger, and Black mothers at 2.3-3.5 grams. These improvements result from increased prenatal care use, reduced air pollution, and shifts in maternal composition.
+  </div>
+</div>
 
-    <div class="paper-item">
-      <div class="paper-title">"Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes"</div>
-      <div class="paper-authors">with <a href="https://scholar.google.com/citations?user=x1gyyigAAAAJ&hl=en" target="_blank">Kenneth Shores</a> and <a href="https://www.education.udel.edu/grad-student/jesse-eze/" target="_blank">Jesse Eze</a></div>
-      <div class="paper-links">
-        <a href="https://eric.ed.gov/?q=cluster&pg=7&id=ED663020" class="paper-link" target="_blank">Abstract</a>
-      </div>
-      <div class="abstract-toggle" onclick="toggleAbstract(this)">
-        <span class="arrow">▶</span> Abstract
-      </div>
-      <div class="abstract-content">
-        This research evaluates how different career and technical education (CTE) pathways affect student outcomes across secondary and postsecondary levels. Using Delaware administrative data, we examine heterogeneous effects across different career clusters including health sciences, information technology, and manufacturing. We employ the stacked DiD approach.
-      </div>
-    </div>
+<!-- Working Papers Section -->
+<h3>Working Papers</h3>
 
-    <div class="paper-item">
-      <div class="paper-title">"Medicaid Expansion and Crime: Evidence from U.S Cities"</div>
-      <div class="paper-authors">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
-      <div class="paper-links">
-        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" class="paper-link" target="_blank">Link</a>
-      </div>
-      <div class="abstract-toggle" onclick="toggleAbstract(this)">
-        <span class="arrow">▶</span> Abstract
-      </div>
-      <div class="abstract-content">
-        Crime rates in the U.S. have fallen over the past two decades, though periods like the pandemic saw sharp increases. This paper examines how the 2014 Medicaid expansion influenced crime in major cities, using daily crime data from the 21 largest U.S. cities. We provide the first causal analysis linking Medicaid expansion to urban crime trends, exploiting variation in state adoption timing to identify effects on violent and property crime rates.
-      </div>
-    </div>
+<div class="paper-item">
+  <div class="paper-title">"Ride-sharing and Crime: Evidence from U.S Cities"</div>
+  <div class="paper-authors">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
+  <div class="paper-status">R&R Transportation Research Interdisciplinary Perspectives</div>
+  <div class="paper-links">
+    <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" class="paper-link" target="_blank">Link</a>
+  </div>
+  <div class="abstract-content">
+    <strong>Abstract:</strong> This paper investigates the causal impact of ride-sharing services (Uber and Lyft) on urban crime rates in major U.S. cities. Using the staggered rollout of ride-sharing services across cities, we employ a difference-in-differences framework to estimate effects on various crime categories. Our findings suggest that ride-sharing availability reduces certain types of crime, potentially through improved transportation options and reduced alcohol-related incidents, while having differential effects across neighborhoods.
+  </div>
+</div>
 
-    <div class="paper-item">
-      <div class="paper-title">"Ride-sharing and Crime: Evidence from U.S Cities"</div>
-      <div class="paper-authors">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
-      <div class="paper-status">R&R Transportation Research Interdisciplinary Perspectives</div>
-      <div class="paper-links">
-        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" class="paper-link" target="_blank">Link</a>
-      </div>
-      <div class="abstract-toggle" onclick="toggleAbstract(this)">
-        <span class="arrow">▶</span> Abstract
-      </div>
-      <div class="abstract-content">
-        This paper investigates the causal impact of ride-sharing services (Uber and Lyft) on urban crime rates in major U.S. cities. Using the staggered rollout of ride-sharing services across cities, we employ a difference-in-differences framework to estimate effects on various crime categories. Our findings suggest that ride-sharing availability reduces certain types of crime, potentially through improved transportation options and reduced alcohol-related incidents, while having differential effects across neighborhoods.
-      </div>
-    </div>
-	
-	<div class="paper-item">
-      <div class="paper-title">"Fueling or Failing: Evidence from Oil Price Decline"</div>
-      <div class="paper-authors">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
-      <div class="paper-status">Manuscript Submitted to Education Economics</div>
-      <div class="abstract-toggle" onclick="toggleAbstract(this)">
-        <span class="arrow">▶</span> Abstract
-      </div>
-      <div class="abstract-content">
-        This study examines the economic consequences of oil price declines using difference-in-differences identification strategy. Educational outcomes are measured using data from the Stanford Education Data Archive (SEDA). We estimate that the shock increased Mathematics and English Language Arts (ELA) scores by approximately 0.02 to 0.06 standard deviations. These gains are concentrated among specific subgroups, including Hispanic, female, Asian, and economically disadvantaged (ECD) students.
-      </div>
-    </div>
-	
+<div class="paper-item">
+  <div class="paper-title">"Fueling or Failing: Evidence from Oil Price Decline"</div>
+  <div class="paper-authors">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
+  <div class="paper-status">Manuscript Submitted to Education Economics</div>
+  <div class="abstract-content">
+    <strong>Abstract:</strong> This study examines the economic consequences of oil price declines using difference-in-differences identification strategy. Educational outcomes are measured using data from the Stanford Education Data Archive (SEDA). We estimate that the shock increased Mathematics and English Language Arts (ELA) scores by approximately 0.02 to 0.06 standard deviations. These gains are concentrated among specific subgroups, including Hispanic, female, Asian, and economically disadvantaged (ECD) students.
+  </div>
+</div>
 
-    <!-- Work-in-Progress Section -->
-    <h3>Work-in-Progress</h3>
-    
+<div class="paper-item">
+  <div class="paper-title">"Intertemporal Elasticity of Labor Supply for Taxicab Drivers"</div>
+  <div class="paper-authors">with <a href="https://swapnil-motghare.github.io/" target="_blank">Swapnil Motghare</a></div>
+  <div class="abstract-content">
+    <strong>Abstract:</strong> This paper examines the intertemporal elasticity of labor supply for taxicab drivers using a novel instrument. We leverage exogenous variation in earnings opportunities to identify labor supply responses. Our findings suggest positive intertemporal elasticity, indicating that drivers increase their labor supply when wages are more. These results have important implications for understanding labor market dynamics in the gig economy.
+  </div>
+</div>
 
-    <div class="paper-item">
-      <div class="paper-title">"Forced Immigration and Borrowing Constraint"</div>
-      <div class="paper-authors">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> and Derrick Liang</div>
-      <div class="abstract-toggle" onclick="toggleAbstract(this)">
-        <span class="arrow">▶</span> Abstract
-      </div>
-      <div class="abstract-content">
-        This paper investigates how forced immigration affects borrowing constraints.
-      </div>
-    </div>
-	</section>
+<div class="paper-item">
+  <div class="paper-title">"Labor Market Consequences of Cycling Program: Evidence from Bihar, India"</div>
+  <div class="abstract-content">
+    <strong>Abstract:</strong> I investigate the long-term causal effects of a government cycling program in Bihar, India on labor market outcomes using a difference-in-differences-in-differences (DDD) approach. The program provided bicycles to female students to reduce barriers to school. I examine whether this intervention had lasting impacts on employment, wages, and labor force participation. Results suggest significant improvements in labor market outcomes, particularly for women and rural populations.
+  </div>
+</div>
+
+<div class="paper-item">
+  <div class="paper-title">"Medicaid Expansion and Crime: Evidence from U.S Cities"</div>
+  <div class="paper-authors">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
+  <div class="paper-links">
+    <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" class="paper-link" target="_blank">Link</a>
+  </div>
+  <div class="abstract-content">
+    <strong>Abstract:</strong> Crime rates in the U.S. have fallen over the past two decades, though periods like the pandemic saw sharp increases. This paper examines how the 2014 Medicaid expansion influenced crime in major cities, using daily crime data from the 21 largest U.S. cities. We provide the first causal analysis linking Medicaid expansion to urban crime trends, exploiting variation in state adoption timing to identify effects on violent and property crime rates.
+  </div>
+</div>
+
+<!-- Work-in-Progress Section -->
+<h3>Work-in-Progress</h3>
+
+<div class="paper-item">
+  <div class="paper-title">"Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes"</div>
+  <div class="paper-authors">with <a href="https://scholar.google.com/citations?user=x1gyyigAAAAJ&hl=en" target="_blank">Kenneth Shores</a> and <a href="https://www.education.udel.edu/grad-student/jesse-eze/" target="_blank">Jesse Eze</a></div>
+  <div class="paper-links">
+    <a href="https://eric.ed.gov/?q=cluster&pg=7&id=ED663020" class="paper-link" target="_blank">Abstract</a>
+  </div>
+</div>
+
+<div class="paper-item">
+  <div class="paper-title">"Forced Immigration and Borrowing Constraint"</div>
+  <div class="paper-authors">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> and Derrick Liang</div>
+</div>
+
+<div class="paper-item">
+  <div class="paper-title">"Marching Through Time: The Enduring Effects of Military Settlements"</div>
+  <div class="paper-authors">with Sarah Shaukat and Attique Ur Rehman</div>
+</div>
+
+</section>
   
   <!-- Teaching Section -->
   <section id="teaching" class="section">
