--- a/index.html
+++ b/index.html
@@ -455,16 +455,14 @@
     }
     
     .abstract-content {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.4s ease;
-      margin-top: 15px;
-      padding-left: 20px;
-      border-left: 2px solid #ddd;
-      color: #555;
-      font-size: 0.95em;
-      line-height: 1.8;
-    }
+  margin-top: 15px;
+  padding-left: 20px;
+  border-left: 2px solid #ddd;
+  color: #555;
+  font-size: 0.95em;
+  line-height: 1.8;
+  margin-bottom: 10px;
+}
     
     .abstract-content.expanded {
       max-height: 500px;
