--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
     }
 
     .header-name {
-      font-size: clamp(1.5rem, 3vw, 2rem);
-      font-weight: normal;
-      color: var(--primary-color);
-      margin: 0;
-      line-height: 1.2;
-      text-transform: uppercase;
-      font-family: 'Roboto', sans-serif;
-      flex: 0 0 auto;
-    }
+  font-size: clamp(1.5rem, 3vw, 2rem);
+  font-weight: normal;
+  color: var(--primary-color);
+  margin: 0;
+  line-height: 1.2;
+  /* text-transform: uppercase; */  
+  font-family: 'Roboto', sans-serif;
+  flex: 0 0 auto;
+}
 
     .header-info {
       font-size: clamp(0.9rem, 2vw, 1.1rem);
@@ -888,8 +888,7 @@
       <!-- Right side: Main content -->
       <div class="home-content">
         <p>Welcome to my website!</p>
-		<p>My name is Vikrant. I am an Economics PhD candidate at the University of Delaware on the job market for 2025-2026. I work on labor and health topics. My research uses econometric causal methods to examine policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>          
-        <p>My work has been published in <em>Social Science Research</em>.</p>
+		<p><strong>Job Market Candidate 2025-2026.</strong> I am an Economics PhD candidate at the University of Delaware. My research applies causal inference methods to labor and health economics, examining how policies affect communities.</p>        <p>My work has been published in <em>Social Science Research</em>.</p>
         <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
       </div>
     </div>
