--- a/index.html
+++ b/index.html
@@ -886,13 +886,24 @@
       </div>
 
       <!-- Right side: Main content -->
-      <div class="home-content">
+      <div style="position: relative;">
+	  <div style="position: absolute; top: -10px; right: 0; background-color: #2c5aa0; color: white; padding: 8px 16px; border-radius: 6px; font-weight: bold; font-size: 0.9rem;">
+	    Job Market Candidate 2025-2026
+	  </div>
+	  <p>Welcome to my website!</p>
+	  <p>I am an Economics PhD candidate at the University of Delaware. My research uses causal inference methods to study labor and health economics, focusing on policy impacts on communities.</p>
+	</div>
+    </div>
+  </section>
+
+  <!-- <div class="home-content">
+		<p><strong>Job Market Candidate 2025-2026.</strong></p>  
         <p>Welcome to my website!</p>
-		<p><strong>Job Market Candidate 2025-2026.</strong> I am an Economics PhD candidate at the University of Delaware. My research applies causal inference methods to labor and health economics, examining how policies affect communities.</p>        <p>My work has been published in <em>Social Science Research</em>.</p>
+		<p> I am an Economics PhD candidate at the University of Delaware. My research applies causal inference methods to labor and health economics, examining how policies affect communities.</p>        <p>My work has been published in <em>Social Science Research</em>.</p>
         <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Research Section - FIXED: Added class="section" -->
   <section id="research" class="section">
