--- a/index.html
+++ b/index.html
@@ -130,9 +130,6 @@
       transition: var(--transition);
     }
 
-    .header-info a[href^="mailto:"] {
-      font-style: italic;
-    }
 
     .header-info a:hover {
       text-decoration: underline;
@@ -886,14 +883,15 @@
       </div>
 
       <!-- Right side: Main content -->
-      <div style="position: relative;">
-	  <div style="position: absolute; top: -10px; right: 0; background-color: #2c5aa0; color: white; padding: 8px 16px; border-radius: 6px; font-weight: bold; font-size: 0.9rem;">
+      <div style="position: relative; padding-top: 50px;">
+	  <div style="position: absolute; top: 0; right: 0; background-color: #2c5aa0; color: white; padding: 8px 16px; border-radius: 6px; font-weight: bold; font-size: 0.9rem;">
 	    Job Market Candidate 2025-2026
 	  </div>
 	  <p>Welcome to my website!</p>
 	  <p>I am an Economics PhD candidate at the University of Delaware. My research uses causal inference methods to study labor and health economics, focusing on policy impacts on communities.</p>
+	  <p> </p>
+	  <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
 	</div>
-    </div>
   </section>
 
   <!-- <div class="home-content">
